--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="category">Category</string>
     <string name="description">Description</string>
     <string name="book_title">Book Title</string>
+    <string name="textview">TextView</string>
 </resources>
